# wavefront-path-tracer

./: CMakeLists.txt  README.md  benchmark.py  compile_flags.txt  design.md
scenes/: bunny_diffuse.json  bunny_studio.json  cornell_box.json  cube_cornell.json  dragon_diffuse.json  dragon_glass.json  materials.json  mesh_test.json  room.json  showcase.json  spheres.json
src/: main_cpu.cpp  main_gpu.cu
src/bvh/: bvh.cpp  bvh.h
src/common/: bvh_node.h  light.h  material.h  queues.h  types.h
src/cpu/: cpu_shading.h  render_cpu.h  wavefront_cpu.cpp
src/gpu/: device_scene.cu  device_scene.h  gpu_bvh.cuh  kernels.cu  optix_programs.cu  render_gpu.cu  render_gpu.h
src/output/: image.cpp
src/scene/: loader.cpp  mesh_loader.h
src/shading/: bsdf.h  sampling.h
src/src/common/: aabb.h  camera.h  hit.h  intersect.h  math.h  shape.h  triangle.h
src/src/cpu/: render_cpu.cpp  wavefront_cpu.cpp  wavefront_cpu.h
src/src/gpu/: gpu_warp.cuh  optix_params.h  optix_state.cu  optix_state.h
src/src/output/: image.h
src/src/scene/: loader.h  mesh_loader.cpp  scene.h
